# dmk

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile  LAPLACE_DIPOLE.md  LICENSE  Makefile  README.md  dmk3_makefile  dmk4_makefile  makefile  stokesdmk2_makefile
ci/: Dockerfile  Jenkinsfile
docs/: pbc-development.md
docs/plans/: 2026-03-18-laplace-gradient-eval.md  2026-03-19-replace-ik-grad-with-poly-derivative.md  2026-03-24-laplace-gradient-fmm3d-benchmark-design.md
docs/reports/: 2026-03-19-gradient-benchmark-report.md
esp_prototype_cpp/: .gitignore  CMakeLists.txt  README.md  esp.cpp  esp_original.cpp  fft_fftw.cpp  main.cpp  run.sh  run_test_poly.sh
esp_prototype_cpp/test_finufft_library/: results.txt
esp_prototype_cpp/test_finufft_polyfit/: .gitignore  CMakeLists.txt  test_poly_pswf.cpp
esp_prototype_cpp/test_finufft_spreader/: CMakeLists.txt  bin_sort.hpp  main.cpp  test_finufft_spreader.cpp
esp_prototype_python/: esp.py  prolate0.py
examples/: CMakeLists.txt  README.md  benchmark_esp.cpp  benchmark_esp_gpu.cpp  benchmark_kernels.cpp  compare_dmk_pvfmm.cpp  debug_mpi.cpp  ewald_esp.cpp  ewald_short.cpp  ewald_shorter.cpp  ewald_test.cpp  ewald_total.cpp  ewald_total.h  example_c.c  fft_parallel.cpp  fft_parallel_2D.cpp  fft_parallel_2D_factored.cpp  fft_parallel_3D.cpp  fft_parallel_v.cpp  main.cpp  measure_error.cpp  measure_error_esp.cpp  parallel_transpose.cpp  parallel_transpose_3D.cpp  test_ewald.c  test_ewald.cpp  verify_esp.py
examples/examples/: Makefile  cmake_install.cmake
examples/test/: Makefile  cmake_install.cmake
include/: dmk.h  mdspan.hpp
include/dmk/: aot_kernels.hpp  bessel.hpp  chebychev.hpp  cuda_charge2proxy_kernelargs.hpp  cuda_charge2proxy_kernels.cuh  cuda_charge2proxy_kernels.hpp  cuda_direct.hpp  cuda_direct_kernels.cuh  cuda_direct_kernels.hpp  cuda_downward.hpp  cuda_eval_targets.hpp  cuda_eval_targets_kernels.cuh  cuda_eval_targets_kernels.hpp  cuda_kernels.cuh  cuda_multiply_kernelft_kernels.cuh  cuda_proxy2pw_kernels.cuh  cuda_proxy2pw_kernels.hpp  cuda_pw_to_proxy_kernels.cuh  cuda_pw_to_proxy_kernels.hpp  cuda_shared_state.hpp  cuda_shift_pw_kernels.cuh  cuda_shift_pw_kernels.hpp  cuda_tensorprod_kernels.cuh  cuda_tensorprod_kernels.hpp  direct.hpp  error.hpp  esp.hpp  fortran.h  fourier_data.hpp  gemm.hpp  legeexps.hpp  logger.h  nvtx_wrapper.h  omp_wrapper.hpp  planewave.hpp  polyfit.hpp  prolate_funcs.hpp  proxy.hpp  tensorprod.hpp  testing.hpp  (+6 more)
include/dmk/cuda/: aot_kernels.hpp  charge2proxy_kernelargs.hpp  charge2proxy_kernels.cuh  charge2proxy_kernels.hpp  direct.hpp  direct_kernelargs.hpp  direct_kernels.cuh  direct_kernels.hpp  downward.hpp  esp_gpu.hpp  esp_sr_coeffs.cuh  eval_targets.hpp  eval_targets_kernelargs.hpp  eval_targets_kernels.cuh  eval_targets_kernels.hpp  form_outgoing.hpp  helpers.hpp  kernels.cuh  multiply_kernelft_kernelargs.hpp  multiply_kernelft_kernels.cuh  multiply_kernelft_kernels.hpp  proxy2pw_kernelargs.hpp  proxy2pw_kernels.cuh  proxy2pw_kernels.hpp  pw2proxy_kernelargs.hpp  pw2proxy_kernels.hpp  pw_to_proxy_kernels.hpp  shared_state.hpp  shared_state_kernels.hpp  shift_pw_kernelargs.hpp  shift_pw_kernels.cuh  shift_pw_kernels.hpp  tensorprod_kernelargs.hpp  tensorprod_kernels.cuh  tensorprod_kernels.hpp  upward.hpp
perf/: CMakeLists.txt  direct_kernel_bench.cpp  jit_kernels.cpp
scripts/: CMakeLists.txt  analyze_esp_error.py  benchmark_gradient.cpp  compare_to_fortran.py  compare_to_single.py  gen_bessel.py  generate_aot_kernels.cpp  generate_esp_sr_coefftags.py  performance_analysis.py  performance_analysis_esp.py  read_dump.py
scripts/hooks/: pre-commit
src/: aot_evaluator.cpp  aot_kernels.cpp  cuda_charge2proxy_kernels.cu  cuda_direct.cpp  cuda_downward.cpp  cuda_eval_targets.cpp  cuda_eval_targets_kernels.cu  cuda_form_outgoing.cpp  cuda_kernels.cu  cuda_multiply_kernelft_kernels.cu  cuda_proxy2pw_kernels.cu  cuda_pw_to_proxy_kernels.cu  cuda_shared_state.cpp  cuda_shift_pw_kernels.cu  cuda_tensorprod_kernels.cu  cuda_upward.cpp  direct.cpp  dmk.cpp  doctest.cpp  esp.cpp  esp_fft.cpp  ewald.cpp  fourier_data.cpp  jit_kernels.cpp  legeexps.cpp  logger.cpp  planewave.cpp  prolate.cpp  proxy.cpp  tensorprod.cpp  tree.cpp  tree_pq.cpp  util.cpp
src/bdmk/: bdmk.f  bdmk4.f  bdmk_local.f  bdmk_local_tables.f  bdmk_pwterms.f  boxfgt_md.f
src/bdmk/sogapproximation/: get_sognodes.f  y2dsognodes.f  y3dsognodes.f
src/common/: dmk_routs.f  pts_tree.f  pts_tree_per.f  tensor_prod_routs.f  tree_data_routs.f  tree_routs.f  tree_routs_per.f  uniform_tree.f  uniform_tree2.f  uniform_tree3.f  voltab3d.f
src/common/specialfunctions/: besj0.f90  besj1.f90  besk0.f90  besk1.f90  calck0.f90  calck1.f90  caljy0.f90  caljy1.f90  chebexps.f  orthom.f  prolaterouts.f  prolcrea.f  proquadr.f  qrsolve.f
src/cuda/: aot_kernels.cu  charge2proxy_kernels.cu  direct.cpp  downward.cpp  esp_cuda.cu  eval_targets.cpp  eval_targets_kernels.cu  form_outgoing.cpp  multiply_kernelft_kernels.cu  proxy2pw_kernels.cu  pw_to_proxy_kernels.cu  shared_state.cpp  shared_state_kernels.cu  shift_pw_kernels.cu  tensorprod_kernels.cu  upward.cpp
src/cuda/jit/: autotune.cpp  autotune.hpp  charge2proxy_launcher.cpp  jit_cache.cpp  (+28 more)
src/pdmk/: kernel_FT.f  lndiv.f  lndiv_fast.f  pdmk.f  pdmk3.f  pdmk4.f  pdmk_local.f  pdmk_pwrouts.f  pdmk_pwterms.f  pdmk_pwterms_stokes3.f  stokes_kernel_FT.f  stokes_kernel_FT3.f  stokesdmk2.f  stokesdmk7.f
test/: CMakeLists.txt  periodic_reference.hpp  test_all.cpp  test_chebyshev.cpp  test_chebyshev_eval_perf.cpp  test_chebyshev_perf.cpp  test_chebyshev_poly_perf.cpp  test_cuda.cpp  test_direct.cpp  test_esp.cpp  test_esp_gpu.cpp  test_ewald.cpp  test_pbc_periodic.cpp  test_pdmk.cpp  test_proxy.cpp  test_reference.cpp  test_tree.cpp
test/bdmk/: makefile  testbdmk.f
test/pdmk/: test_l3d_laplace_dipole_pdmk.f  testpdmk.f  teststokesdmk.f
vec-kernels/include/: kernels.h  kernels7.h  l3d_laplace_dipole_kernel.hpp  sctllog.h  template-kernels.hpp  template-kernels2.hpp  template-kernels7.hpp
vec-kernels/src/: libkernels.cpp  libkernels2.cpp  libkernels7.cpp
(+22 files in other folders)
