set(TEST_ALL_SRC test_all.cpp test_pbc_periodic.cpp test_direct.cpp test_esp.cpp)
if (DMK_BUILD_REFERENCE)
  list(APPEND TEST_ALL_SRC test_reference.cpp)
endif()
add_executable(test_all ${TEST_ALL_SRC})
target_link_libraries(test_all PRIVATE dmk_shared)
if (DMK_BUILD_REFERENCE)
  target_link_libraries(test_all PRIVATE dmk_ref)
endif()
